--- a/main.html
+++ b/main.html
@@ -3,14 +3,22 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<h1>
+MY FAVOURITE SONG
+</h1>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<div id="favsong"></div>
+	<a href="https://www.youtube.com/watch?v=AJtDXIazrMo">my current favourite song is:</a>
 
+
+	
+   
 </body>
 
-</html>
+<!-- </html>
+<a href="https://www.youtube.com/watch?v=AJtDXIazrMo" target="_blank" My current favourite song is>
+	
+</a> -->
